[gd_scene load_steps=24 format=3 uid="uid://2infqnwtmuf7"]

[ext_resource type="Script" uid="uid://djsi83bhpf3co" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://clnymeyw1pyt7" path="res://sprites/nightCastle2.png" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://d1jlei22uix13" path="res://Berry Rotunda.ttf" id="2_bqqt6"]
[ext_resource type="AudioStream" uid="uid://cn0ssauqhw8u3" path="res://musics/Road to Bedran main menu.ogg" id="4_tbmy8"]
[ext_resource type="Script" uid="uid://b1iyurcykh137" path="res://scripts/audio_control.gd" id="5_8ln24"]
[ext_resource type="Script" uid="uid://ddmk4kydc33h1" path="res://scripts/easy_mode.gd" id="6_oa1go"]
[ext_resource type="Script" uid="uid://conl55kgl64dp" path="res://scripts/full_screen_control.gd" id="6_rtw2f"]
[ext_resource type="PackedScene" uid="uid://0jhwk7eonvue" path="res://scenes/controls.tscn" id="7_oa1go"]
[ext_resource type="AudioStream" uid="uid://dqprdnxsw3jd5" path="res://musics/sfx/Menu_Select.wav" id="9_5dd4i"]
[ext_resource type="AudioStream" uid="uid://dks0tbvlyyj0p" path="res://musics/sfx/Menu_Back.wav" id="10_lgwnu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu84c"]
texture = ExtResource("1_ekxnf")
modulate_color = Color(0.417257, 0.417257, 0.417257, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.811837, 0.811837, 0.811837, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.563626, 0.563626, 0.563626, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_bqqt6"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wu84c"]
color = Color(3.36915e-07, 3.85046e-07, 0.646827, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8ln24"]
color = Color(3.36915e-07, 3.85046e-07, 0.646827, 1)
thickness = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oa1go"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tbmy8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jk1qb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5dd4i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtw2f"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wu84c")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 75.0
offset_right = 182.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Button" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "Start Game"

[node name="Button2" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "Options"

[node name="Controls" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "Controls"

[node name="Button3" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -207.0
offset_right = 354.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 11
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 68
text = "Road To Bedran"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_tbmy8")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -98.0
offset_right = 214.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Options"]
layout_mode = 0
offset_left = 140.0
offset_top = 308.0
offset_right = 278.0
offset_bottom = 356.0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -128.5
offset_right = 147.0
offset_bottom = 101.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Music" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Options/VBoxContainer/Music"]
layout_mode = 2
text = "Music Volume"

[node name="AudioControl" type="HSlider" parent="Options/VBoxContainer/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_bqqt6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_wu84c")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8ln24")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_8ln24")
audio_bus_name = "Music"

[node name="SFX" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 39

[node name="Label" type="Label" parent="Options/VBoxContainer/SFX"]
layout_mode = 2
text = "SFX Volume"

[node name="AudioControl" type="HSlider" parent="Options/VBoxContainer/SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_bqqt6")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_wu84c")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8ln24")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_8ln24")
audio_bus_name = "SFX"

[node name="FullScreenControl" type="CheckButton" parent="Options/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "FullScreen"
script = ExtResource("6_rtw2f")

[node name="easyMode" type="CheckButton" parent="Options/VBoxContainer"]
layout_mode = 2
text = "Easy Mode"
script = ExtResource("6_oa1go")

[node name="ResetProgression" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.919281, 3.00817e-06, 7.70092e-07, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "Delete Progression"

[node name="levelSelection" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -98.0
offset_right = 214.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="levelSelection"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="levelSelection"]
layout_mode = 0
offset_left = 140.0
offset_top = 308.0
offset_right = 278.0
offset_bottom = 356.0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="levelSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -83.5
offset_right = 126.0
offset_bottom = 98.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="lvl1" type="HBoxContainer" parent="levelSelection/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="1-1" type="Button" parent="levelSelection/VBoxContainer/lvl1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "1-1"

[node name="1-2" type="Button" parent="levelSelection/VBoxContainer/lvl1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "1-2"

[node name="1-3" type="Button" parent="levelSelection/VBoxContainer/lvl1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "1-3"

[node name="lvl2" type="HBoxContainer" parent="levelSelection/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="2-1" type="Button" parent="levelSelection/VBoxContainer/lvl2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "2-1"

[node name="2-2" type="Button" parent="levelSelection/VBoxContainer/lvl2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "2-2"

[node name="2-3" type="Button" parent="levelSelection/VBoxContainer/lvl2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "2-3"

[node name="lvl3" type="HBoxContainer" parent="levelSelection/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="3-1" type="Button" parent="levelSelection/VBoxContainer/lvl3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "3-1"

[node name="3-2" type="Button" parent="levelSelection/VBoxContainer/lvl3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "3-2"

[node name="3-3" type="Button" parent="levelSelection/VBoxContainer/lvl3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "3-3"

[node name="ConfirmationDialog" type="AcceptDialog" parent="."]
title = "Reset Progression"

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_oa1go")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tbmy8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_jk1qb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5dd4i")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rtw2f")
text = "Credits"

[node name="Credits" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -89.5
offset_right = 323.0
offset_bottom = 289.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Game Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Director" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 79.5
offset_right = 12.0
offset_bottom = 139.5
grow_horizontal = 2
theme_override_font_sizes/font_size = 23
text = "Director & Lead Programmer                         Karl Ghanem"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Composer" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -11.0
offset_top = 169.0
offset_right = 42.0
offset_bottom = 244.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 23
text = "Composer & Sound Designer                         Jean Ghanem
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tester" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 13.0
offset_top = 235.5
offset_right = 13.0
offset_bottom = 302.5
grow_horizontal = 2
theme_override_font_sizes/font_size = 23
text = "Lead Tester / QA                                               Mario Sabeh"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 260.0
offset_top = 312.5
offset_right = 398.0
offset_bottom = 360.5
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "Back"

[node name="Controls" parent="." instance=ExtResource("7_oa1go")]
visible = false
layout_mode = 0

[node name="Back" type="Button" parent="Controls"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -102.0
offset_right = 69.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_8ln24")
text = "Back"

[node name="SFX_SELECT" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_5dd4i")
bus = &"SFX"

[node name="SFX_BACK" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_lgwnu")
bus = &"SFX"

[connection signal="pressed" from="MainButtons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Button2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainButtons/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MainButtons/Button3" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Options/VBoxContainer/Music/AudioControl" to="Options/VBoxContainer/Music/AudioControl" method="_on_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/SFX/AudioControl" to="Options/VBoxContainer/SFX/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/VBoxContainer/FullScreenControl" to="Options/VBoxContainer/FullScreenControl" method="_on_toggled"]
[connection signal="toggled" from="Options/VBoxContainer/easyMode" to="Options/VBoxContainer/easyMode" method="_on_toggled"]
[connection signal="pressed" from="Options/VBoxContainer/ResetProgression" to="." method="_on_reset_progression_pressed"]
[connection signal="pressed" from="levelSelection/Back" to="." method="_on_back_options_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_back_options_pressed"]
[connection signal="pressed" from="Controls/Back" to="." method="_on_back_options_pressed"]
